--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
-/.buildpath
-/.project
-/.buildpath
-/.project
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# OS generated files #
+######################
+.DS_Store?
+ehthumbs.db
+Icon?
+Thumbs.db
+
+# IDE files #
+###################
+.project
+.buildpath
